--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -11,7 +11,8 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "lru-cache": "^11.0.1",
+    "glob": "^11.0.0",
+    "lru-cache": "^10.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
