--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +57,9 @@
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.5.0",
     "@rollup/plugin-terser": "^0.4.4"
+  },
+  "resolutions": {
+    "glob": "^11.0.0",
+    "rimraf": "^6.0.1"
   }
 }
