--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "glob": "^11.0.0",
+    "glob": "11.0.0",
     "lru-cache": "^10.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -59,7 +59,7 @@
     "@rollup/plugin-terser": "^0.4.4"
   },
   "resolutions": {
-    "glob": "^11.0.0",
-    "rimraf": "^6.0.1"
+    "glob": "11.0.0",
+    "rimraf": "6.0.1"
   }
 }
