--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "glob": "11.0.0",
     "lru-cache": "^10.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -19,15 +18,13 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
-    "rimraf": "^6.0.1",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npx npm-force-resolutions"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,19 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-class-properties": "^7.25.4",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
-    "@babel/plugin-transform-numeric-separator": "^7.24.7",
-    "@babel/plugin-transform-optional-chaining": "^7.24.8",
-    "@babel/plugin-transform-private-methods": "^7.25.4",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.5.0",
     "@rollup/plugin-terser": "^0.4.4"
-  },
-  "resolutions": {
-    "glob": "11.0.0",
-    "rimraf": "6.0.1",
-    "svgo": "2.8.0"
   }
 }
