--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -31,6 +31,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "glob": "^9.3.5",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -54,6 +55,7 @@
     "react-toastify": "^10.0.5",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
+    "rimraf": "^4.4.1",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
