--- a/clinic-app/package.json
+++ b/clinic-app/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -78,7 +79,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "cross-env CI=false react-scripts build",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -100,8 +101,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@jridgewell/sourcemap-codec": "^1.5.0",
-    "@rollup/plugin-terser": "^0.4.4"
+    "@rollup/plugin-terser": "^0.4.4",
+    "cross-env": "^7.0.3"
   },
   "jest": {
     "roots": [
